done 2nd assignment

--- a/static/style/base.css
+++ b/static/style/base.css
@@ -134,7 +134,7 @@ initial element background in the base stylesheet, not in dynamically loaded sty
 .samsung.layout540p #app {
     width: 960px;
     height: 540px;
-    background-image: url(../img/bbc_background_540.png);
+    background-image: url(../img/bbc_background_540.jpg);
     background-repeat: no-repeat;
     background-color: red;
 }
@@ -142,7 +142,7 @@ initial element background in the base stylesheet, not in dynamically loaded sty
 .samsung.layout720p #app {
     width: 1280px;
     height: 720px;
-    background-image: url(../img/bbc_background_720.png);
+    background-image: url(../img/bbc_background_720.jpg);
     background-repeat: no-repeat;
 }
 
