--- a/static/style/layouts/540p.css
+++ b/static/style/layouts/540p.css
@@ -31,9 +31,10 @@
     height: 540px;
     top: 50%;
     margin: -270px auto 0 auto;
-    background-image: url(../../img/bbc_background_540.png);
+    background-image: url(../../img/bbc_background_540.jpg);
     background-repeat: no-repeat;
     background-color: red;
+    background-size: cover;
 }
 
 #helloWorldLabel, #welcomeLabel {
